--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
 </head>
 <body>
-  <h1>Portfolio</h1>
-    <h2>Web Developer | Game Developer</h2>
+  <h1>Interactive CV</h1>
+    <h2>Web Development| Game Development | Tehcnical support</h2>
+    <button id="myButton">Name and DoB</button>
     <!-- Nav Bar -->
     <nav class="navbar fixed-top bg-body-tertiary bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
         <div class="container-fluid">
@@ -22,10 +23,10 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-                                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
                             </svg>
-                            Home
+                            Linkedin page
                         </a>
                     </li>
                     <li class="nav-item">
@@ -38,8 +39,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./public/Game-Development-Experience.html">Game Development</a></li>
                             <li><a class="dropdown-item" href="./public/3D-Assets-In-Blender.html">3D Modelling</a></li>
-                            <li><a class="dropdown-item" href="#">Gallery</a></li>
-                            <li><a class="dropdown-item" href="#">Under Review</a></li>
+                            <li><a class="dropdown-item" href="#">Wed Development</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -50,54 +50,65 @@
                         <a style="color:tomato;" class="nav-link disabled">Disabled</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
     <!-- Nav Bar End-->
     <hr>
-    <button id="myButton">Click me for alert</button>
     <div>
       <h3 id="about-me">About me</h3>
-      <p>I'm a passionate developer with a deep love for both game and web development, constantly honing my skills to become a full-stack developer. My journey in coding started with a fascination for creating immersive game worlds, which led me to explore the intricacies of web development. When I'm not coding, you'll likely find me venturing into thick forests, where I draw inspiration from the wilderness, or practicing Wing Chun, a martial art that has become a way of life for me. This blend of creative exploration and disciplined practice fuels my drive to develop engaging digital experiences. Whether I’m crafting a new game or refining a web application, I’m always eager to learn, grow, and push the boundaries of what’s possible.</p>
+      <p>I am a versatile individual with a strong background in technical support. My experience includes self-taught in game and web
+        development in a relatively short space of time, where I gained proficiency in C#. This was
+        followed by HTML, CSS and JavaScript. This foundation has equipped me with valuable
+        skills that go hand in hand with user support, technical support and process optimization
+        position. Eager to leverage my technical expertise and problem-solving abilities, I am
+        committed to contributing effectively to the team.
+        </p>
     </div>
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">All technological skills</h1>
-            <p id="skills"><span id="completed" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML experience (2 years)">HTML</span>| <span id="completed">CSS</span> | JavaScript 6E | <span id="completed">C#</span>| React | Angular | jQuery | <span id="completed">Bootstrap V5.3</span> | MangoDB | Web3 | DPass | Mongoose | Unity game engine | DaVinci Resolve | Blender 3D | GitHub | <span id="completed">FlexBox</span></p>
+            <p id="skills">
+                <span id="completed" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML experience (2 years)"> HTML </span>|
+                <span id="completed" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS experience (2 years)"> CSS </span>|
+                <span id="completed" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript experience (1 year)">JavaScript 6E </span>|
+                <span id="completed" data-bs-toggle="tooltip" data-bs-placement="top" title="C# experience (4 years)"> C# </span>|
+                React | Angular | jQuery | 
+                <span id="completed">Bootstrap V5.3</span>|
+                MangoDB | Web3 | DPass | Mongoose | Unity game engine | DaVinci Resolve | Blender 3D | GitHub |
+                <span id="completed">FlexBox</span>
+            </p>
         </div>
         <div id="liveAlertPlaceHolder"></div>
-    <h3><u>All Technological Skills</u></h3>
     <hr>
 <div class="flex-container">
   <div class="box">
     <h3>Game Development Portfolio</h3>
     <p>With the theoretical as well as practical languages and framework experience, I’ve undertaken numerous personal projects that have served as a great learning experience, some of them include a 3D game which is currently still ongoing within the Unity game engine as well as multiple multi-page websites.</p>
     <ul>
-        <li><u>Project 1</u>: Focussing on gameplay mechanics as well as story with an RPG style game is still ongoing, being updated regularly the more I learn within the game industry.</li>
-        <li><u>Project 2</u>: Focusing on the gameplay aspects and less so on the story, this project is an FPS style game which is being updated as my skills develop.</li>
-        <li><u>Project 3</u>: A website which houses my portfolio as well as an insight into my life and my projects. This can also be used as a hub for my projects and its updates.</li>
-        <li><u>Project 4</u>: As a member of a small team of like-minded people, I’m undertaking more complex 3D asset modeling to sharpen my artistic skills. This goes hand in hand with my project 1 and 2 which also uses a lot of 3D assets.</li>
+        <li><u><b>Project 1</b></u>: Focussing on gameplay mechanics as well as story with an RPG style game is still ongoing, being updated regularly the more I learn within the game industry.</li>
+        <li><u><b>Project 2</b></u>: Focusing on the gameplay aspects and less so on the story, this project is an FPS style game which is being updated as my skills develop.</li>
+        <li><u><b>Project 3</b></u>: A website which houses my portfolio as well as an insight into my life and my projects. This can also be used as a hub for my projects and its updates.</li>
+        <li><u><b>Project 4</b></u>: As a member of a small team of like-minded people, I’m undertaking more complex 3D asset modeling to sharpen my artistic skills. This goes hand in hand with my project 1 and 2 which also uses a lot of 3D assets.</li>
         <li>Experience with lighting, VFX, animation, texture mapping, and 3D modeling.</li>
     </ul>
     <p>These projects are available for review by any interviewer upon request. Along with these projects, I’ve participated in different challenges like game jams which usually put you up against the clock.</p>
-    <button id="moreInfoButton3">click here for more information</button>
+    <button id="moreInfoButton3">click here for a more</button>
   </div>
-  <div class="box">
-    <h3>Blender 3D modelling experience</h3>
-    <ul>
-      <li>Solid working knowledge of Substance Painter, Blender and Photoshop</li>
-      <li>Good working knowledge of relevant 3D software with dynamics tools (e.g. Blender)</li>
-      <li>Experience in creating high quality assets for real time rendering applications.</li>
-      <li>Experience with lighting, VFX, animation, texture mapping and 3D modelling.</li>
-      <li>Experience in High to Low Poly workflows.</li>
-      <li>Experience with fixing artefacts and topology issues.</li>
-    </ul>
-      <button id="moreInfoButton1">click here for more information</button>
-  </div>
+      <div class="flex-container">
+        <div class="box">
+            <h3>Blender 3D modelling experience</h3>
+        <ul>
+          <li>Solid working knowledge of Substance Painter, Blender and Photoshop</li>
+          <li>Good working knowledge of relevant 3D software with dynamics tools (e.g. Blender)</li>
+          <li>Experience in creating high quality assets for real time rendering applications.</li>
+          <li>Experience with lighting, VFX, animation, texture mapping and 3D modelling.</li>
+          <li>Experience in High to Low Poly workflows.</li>
+          <li>Experience with fixing artefacts and topology issues.</li>
+        </ul>
+          <button id="moreInfoButton1">click here for more</button>
+        </div>
+      </div>
   <div class="box">
     <h3>Relevent job experience</h3>
     <h5>Build a Rocket Boy Player Services (September 2023 - February 2024)</h4>
@@ -110,9 +121,10 @@
         <li>Extensive use of Jira, Miro and other Micsosoft software packlages like Powerpoint and Excell</li>
         <li>Collaborating with a team to bring the best player services practices to the live enviournment</li>
       </ul>
-        <button id="moreInfoButton2">click here for more information</button>
+        <button id="moreInfoButton2">click here for more</button>
   </div>
 </div>
+
 <a href="./public/about.html">About Me</a>
 <a href="./public/contact.html">Contact Me</a>
 <!-- JavaScript link (External file) -->
